src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>ACCL__Job_Title__c</fullName>
        <description>Job Title of the contact.</description>
        <label>Job Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Mailing_City__c</fullName>
        <description>Mailing City of customer.</description>
        <label>Mailing City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Mailing_Country__c</fullName>
        <description>Mailing Country of customer.</description>
        <label>Mailing Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>en</fullName>
                </value>
                <value>
                    <fullName>de</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Mailing_Postal_Code__c</fullName>
        <description>Mailing Postal Code of customer.</description>
        <label>Mailing Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Mailing_State__c</fullName>
        <description>Mailing State of customer.</description>
        <label>Mailing State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>NC</fullName>
                </value>
                <value>
                    <fullName>NM</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>SC</fullName>
                </value>
                <value>
                    <fullName>TN</fullName>
                </value>
                <value>
                    <fullName>VA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Mailing_Street__c</fullName>
        <description>Mailing Street of customer.</description>
        <label>Mailing Street</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Main_Function__c</fullName>
        <description>Main Function.</description>
        <label>Main Function</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PO</fullName>
                </value>
                <value>
                    <fullName>Secretary</fullName>
                </value>
                <value>
                    <fullName>CategoryManager</fullName>
                </value>
                <value>
                    <fullName>KAM</fullName>
                </value>
                <value>
                    <fullName>BuyingAgent</fullName>
                </value>
                <value>
                    <fullName>StoreManager</fullName>
                </value>
                <value>
                    <fullName>Owner</fullName>
                </value>
                <value>
                    <fullName>Tenant</fullName>
                </value>
                <value>
                    <fullName>Decision Maker</fullName>
                </value>
                <value>
                    <fullName>Influencer</fullName>
                </value>
                <value>
                    <fullName>Buyer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Postbox__c</fullName>
        <description>Postbox.</description>
        <label>PostBox</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Record_Link__c</fullName>
        <description>Link to the detail page of the Contact record.</description>
        <formula>HYPERLINK(&quot;/&quot; &amp;Id, $Label.accl__record_link, &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Old_Value__c</fullName>
        <label>Account Old Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>MDLZ_Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MLZ_ContactTimeFrom__c</fullName>
        <description>user can be contacted from</description>
        <label>Contact Time From</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>MLZ_ContactTimeThru__c</fullName>
        <description>User can be contacted Thru</description>
        <label>Contact Time Thru</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>MLZ_PreferredContactMethod__c</fullName>
        <description>MDLZ Preferred Contact Method</description>
        <label>Preferred Contact Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MLZ_PreferredName__c</fullName>
        <label>Preferred Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>ACCL__ACSF_Contacts</fullName>
        <columns>CONTACT.SALUTATION</columns>
        <columns>CONTACT.LAST_NAME</columns>
        <columns>CONTACT.FIRST_NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.PHONE3</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.ACCL__Contact</value>
        </filters>
        <label>ACSF Contacts</label>
        
    </listViews>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
        
    </listViews>
    <listViews>
        <fullName>Customer_Contacts</fullName>
        <columns>CONTACT.SALUTATION</columns>
        <columns>CONTACT.LAST_NAME</columns>
        <columns>CONTACT.FIRST_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCL__Main_Function__c</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.PHONE3</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.ACCL__Contact</value>
        </filters>
        <label>Customer Contacts</label>
        
    </listViews>
    <listViews>
        <fullName>Mondelez_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Mondelez Contacts</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.PHONE1</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
        
    </listViews>
    <recordTypes>
        <fullName>ACCL__Contact</fullName>
        <active>true</active>
        <description>This Contact record type will be used in ACSF</description>
        <label>Contact</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Account_Name</fullName>
        <active>false</active>
        <description>Required Field</description>
        <errorConditionFormula>ISBLANK( AccountId )</errorConditionFormula>
        <errorDisplayField>AccountId</errorDisplayField>
        <errorMessage>Complete Account Name field</errorMessage>
    </validationRules>
   <!---->
</CustomObject>